@@ -184,7 +184,9 @@ module Log =
     let verbose_pretty_location = false
     let not_implemented_color = ConsoleColor.DarkRed
     let uni_color = ConsoleColor.Blue
-    let test_color = ConsoleColor.Green
+    let test_color = ConsoleColor.Blue
+    let test_ok_color = ConsoleColor.Green
+    let test_failed_color = ConsoleColor.Red
     let resolve_color = ConsoleColor.Magenta
     let error_color = cfg.fatal_error_color
 
@@ -194,7 +196,7 @@ module Log =
 
 module Parsing =
     let line_bias = 0
-    let col_bias = 1
+    let col_bias = 0
     let detailed_error_context = false
 
 module Report = 
