@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+    <!--package id="FSharp.Core" version="3.1.2.5" targetFramework="net461" /-->
   <package id="FsLexYacc.Runtime" version="6.1.0" targetFramework="net45" />
+  <package id="PPrint" version="2.0.0" targetFramework="net461" />
 </packages>
